--- a/React/React-nodebird/front/package.json
+++ b/React/React-nodebird/front/package.json
@@ -13,9 +13,12 @@
   "dependencies": {
     "antd": "^4.4.3",
     "next": "^9.4.4",
+    "next-redux-wrapper": "^6.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
     "react-slick": "^0.27.1",
+    "redux": "^4.0.5",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
