--- a/React/React-nodebird/front/package.json
+++ b/React/React-nodebird/front/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
     "nodemon": "^2.0.4",
+    "redux-devtools-extension": "^2.13.8",
     "webpack": "^4.44.0"
   }
 }
