--- a/React/React-nodebird/front/.eslintrc
+++ b/React/React-nodebird/front/.eslintrc
@@ -1,6 +1,6 @@
-/* 코드 스타일 획일화? */
-
+/* 코드 스타일 획일화 */
 {
+   
     "parserOptions": {
         "ecmaVersion": 2020,
         "sourceType": "module",
