--- a/React/React-nodebird/front/package.json
+++ b/React/React-nodebird/front/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "antd": "^4.4.3",
+    "axios": "^0.19.2",
     "next": "^9.4.4",
     "next-redux-wrapper": "^6.0.2",
     "react": "^16.13.1",
@@ -24,7 +25,9 @@
   },
   "devDependencies": {
     "eslint": "^7.5.0",
+    "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
     "nodemon": "^2.0.4",
